<resources>
    <string name="app_name">Ribbit</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_chat">Message</string>
    <string name="title_activity_sign_up">Registration</string>
    <string name="title_activity_add_friends">Add Friends</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_splash_screen">Ribbit</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">password</string>
    <string name="login_button">Login</string>
    <string name="email_hint">Email@gmail.com</string>
    <string name="signUpLabel">Sign Up</string>
    <string name="signUpErrorMessage">please make sure you fill all field correctly</string>
    <string name="loginErrorMessage">username or password not filled correctly</string>
    <string name="signUpErrorTitle">Oops</string>
    <string name="loginErrorTitle">Oops</string>
    <string name="inboxTitle">inbox</string>
    <string name="friendsTitle">friends</string>
    <string name="emptyInboxLabel">inbox is empty</string>
    <string name="emptyFriendsLabel">Add Friends to Begin</string>
    <string name="action_logout">Logout</string>
    <string name="action_add_friends">Add Friend</string>
    <string name="profile_other">profile other</string>
    <string name="profile_me">profile me</string>
    <string name="editFriendsErrorTitle">Sorry!!</string>
    <string name="emptyList">There\'s no people to display</string>
    <string name="item_nameLabel">My Name</string>
    <string name="item_emailLabel">Email@email.com</string>
    <string name="action_add">add</string>
    <string name="selected_count">%1$s selected</string>
    <string name="phoneNumber_hint">phone number</string>
    <string name="username_error">username should contain 4 &#8211; 20 char</string>
    <string name="password_error">password should contain 8 &#8211; 20 char</string>
    <string name="email_error">email not valid</string>
    <string name="name_hint">full name</string>
    <string name="name_error">name can\'t be empty</string>
    <string name="phone_number_error">phone number field can\'t be empty</string>
    <string name="media_storage_error">Failed to get destination URI</string>
    <string name="finish">Finish</string>
    <string name="action_cancel">action canceled</string>
    <string name="default_profile_status">i don\'t like share my doubt</string>
    <string name="default_profile_name">No Name</string>
    <string name="positive_save_profile">profile saved successfully</string>
    <string name="negative_save_profile">profile saved unsuccessfully</string>
    <string name="item_statusLabel">my status</string>
    <string name="text_previous">Back</string>
    <string name="text_next">Next</string>

    <string-array name="edit_profile_pictures">
        <item>pick from SD card</item>
        <item>take a picture</item>
    </string-array>

    <string-array name="add_friend_dialog">
        <item>open</item>
        <item>add friend</item>
    </string-array>
    <string name="title_activity_image_cropper">ImageCropperActivity</string>
    <string name="action_done">done</string>
    <string name="action_refresh">refresh</string>
</resources>
