<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="16dp">


        <EditText
            android:id="@+id/field_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/field_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/field_email"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:maxLines="1">
        </EditText>

        <com.xwray.passwordview.PasswordView
            android:id="@+id/field_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/field_username"
            android:hint="@string/password_hint"
            android:inputType="textPassword"/>

    </RelativeLayout>
</ScrollView>